# limeext

./: .gitignore  PackagesList.cmake  README.md  TPLsList.cmake
LIME/: CMakeLists.txt
LIME/cmake/: Dependencies.cmake  LIME_config.hpp.in
LIME/example/: CMakeLists.txt
LIME/example/1D_conj_heat/: CMakeLists.txt  ConvDiff_EQ.cpp  ConvDiff_EQ.hpp  Region_2_nox.xml  lime_mpd.cpp
LIME/example/brusselator/: Basis.cpp  Basis.hpp  Brusselator_Equation.cpp  Brusselator_Equation.hpp  Brusselator_Species.cpp  Brusselator_Species.hpp  Brusselator_Species_nox.xml  Brusselator_Temperature.cpp  Brusselator_Temperature.hpp  CMakeLists.txt  Example_Brusselator.cpp  Example_Brusselator_TriKota.cpp  Example_Brusselator_p_g.cpp  ParameterSelection.xml  Problem_Manager_setup_for_fp.xml  Problem_Manager_setup_for_jfnk.xml  dakota.in
LIME/example/mock_decart_star/: CMakeLists.txt  MockModelEvals.cpp  MockModelEvals.hpp  Problem_Manager_setup_fp.xml  main.cpp
LIME/example/supersimple/: CMakeLists.txt  CON1D_ModelEval.cpp  CON1D_ModelEval.hpp  CON1D_ModelEval0.cpp  CON1D_ModelEval0.hpp  CON1D_ModelEval0_w_Resid.cpp  CON1D_ModelEval0_w_Resid.hpp  CON1D_ModelEval_w_Resid.cpp  CON1D_ModelEval_w_Resid.hpp  NEUTRON_ModelEval.cpp  NEUTRON_ModelEval.hpp  NEUTRON_ModelEval0.cpp  NEUTRON_ModelEval0.hpp  NEUTRON_ModelEval_w_Elim.cpp  NEUTRON_ModelEval_w_Elim.hpp  Problem_Manager_setup.xml  lime_mpd.cpp  (+18 more)
LIME/src/: CMakeLists.txt  LIME_Broadcast_File.cpp  LIME_Broadcast_File.hpp  LIME_Data_Transfer_Operator.hpp  LIME_Elimination_Module.hpp  LIME_FixedPoint_Accelerators.cpp  LIME_FixedPoint_Accelerators.hpp  LIME_Hierarchy_Problem_Manager.cpp  LIME_Hierarchy_Problem_Manager.hpp  LIME_Model_Evaluator.cpp  LIME_Model_Evaluator.hpp  LIME_PrePostOperator.cpp  LIME_PrePostOperator.hpp  LIME_Problem_As_Operator.hpp  LIME_Problem_Manager.cpp  LIME_Problem_Manager.hpp  LIME_Strings.cpp  LIME_Strings.hpp
LIME/unit_tests/: CMakeLists.txt  UnitTestAdjustTimeStep.cpp  UnitTestAndersonAcceleration.cpp  UnitTestFixedPoint.cpp  UnitTestHierarchySolves.cpp  UnitTestHierarchySupport.cpp  UnitTestMain.cpp  UnitTestNonlinElim.cpp  UnitTestProblemManagerOperators.cpp  UnitTestStandardTransfers.cpp
(+85 files in other folders)
